--- a/demo_simple2/demo_simple.uvprojx
+++ b/demo_simple2/demo_simple.uvprojx
@@ -404,6 +404,11 @@
               <FileType>1</FileType>
               <FilePath>.\display.c</FilePath>
             </File>
+            <File>
+              <FileName>sensor.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\sensor.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
